# niveo

./: .gitignore  Cargo.toml  ChangeLog.md  LICENSE  README.md  cabal.project  cabal.project.freeze  hie.yaml  niveo.cabal  package.yaml  stack.yaml
.github/workflows/: test.yml
app/: Dispatch.hs  Main.hs
assets/std/: list.niveo
src/: Niveo.hs  lib.rs  syntax.rs
src/Niveo/: Instances.hs  Interpreter.hs  Parser.hs  Utils.hs
src/Niveo/Interpreter/: FileSystem.hs  Std.hs  Types.hs  Utils.hs
src/syntax/: lexer.rs  parser.rs
test/Tests/: Common.hs  Interpreter.hs  Parser.hs
