[package]
name = "niveo"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

authors = ["Rami3L <rami3l@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
derive_more = "0.99.17"
itertools = "0.10.5"
paste = "1.0.9"

[dev-dependencies]
indoc = "1.0.7"
